<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BarCodeTestActivity!</string>
    <string name="app_name">BarCodeTest</string>
    <!-- main.xml -->
    <string name="btn_open_camera">Open camera</string>
    <string name="btn_generate_qrcode">Generate QRcode</string>
    <string name="tv_scan_result">Scan result: </string>
    <string name="et_gqcode_hint">Input the text</string>
    <string name="imgv_content_description">Bitmap Generate QRcode</string>
    
    <!-- camera.xml -->
    <string name="tv_scan_barcode">Scan Barcode</string>
    <string name="btn_cancle">Cancle</string>
    
    <!-- dialog.xml -->
    <string name="tv_save_photos">是否将该二维码保存到本地相册 ?</string>
</resources>